css/theme/simon.css
/* ... */
html.title-slide body {
  background: -webkit-radial-gradient(center, circle cover, hsl(297,99%,54%) 0%, #1c1e20 100%);
}

html.main-slide body {
  background: -webkit-radial-gradient(center, circle cover, rgb(138, 16, 109)  0%, #1c1e20 100%);
}

html.secondary-slide body {
  background: -webkit-radial-gradient(center, circle cover, rgb(19, 128, 5)  0%, #1c1e20 100%);
}

html.tertiary-slide body {
  background: -webkit-radial-gradient(center, circle cover, rgb(26, 1, 141) 0%, #1c1e20 100%);
}

.serif {
  font-family: Garamond, Georgia, serif;
}

.reveal table.list {
  font-size: 70%;
  
}

.reveal table.list td:first-of-type {
  text-align: right;  
  white-space: nowrap;
  vertical-align: top;
}

.reveal table.list td:first-of-type::after {
  content: '⇨';
  margin-left: 1em;
}

.main-slide {
  font-size:500%;
}

.reveal {
  font-family: "Josefin Sans", sans-serif;
  font-size: 40px;
  font-weight: 300;
  color: #eee; }

::selection {
  color: #fff;
  background: #FF5E99;
  text-shadow: none; }

::-moz-selection {
  color: #fff;
  background: #FF5E99;
  text-shadow: none; }

::marker {
  font-size: 75%;
  font-weight: 100;
}

.reveal .slides > section,
.reveal .slides > section > section {
  line-height: 1.3;
  font-weight: inherit; }

/*********************************************
 * HEADERS
 *********************************************/
.reveal h1,
.reveal h2,
.reveal h3,
.reveal h4,
.reveal h5,
.reveal h6 {
  margin: 0 0 40px 0;
  color: #eee;
  font-family: "League Gothic", Impact, sans-serif;
  font-weight: normal;
  line-height: 1.2;
  letter-spacing: normal;
  /*text-transform: uppercase;*/
  text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
  word-wrap: break-word; }

.reveal h1 {
  font-size: 3.8em; }

.reveal h2 {
  font-size: 2.6em; }

.reveal h3 {
  font-size: 2em; }

.reveal h4 {
  font-size: 1.4em; 
  margin-bottom:-10px !IMPORTANT;
  margin-top:-20px !IMPORTANT;
  color: white !IMPORTANT;
  letter-spacing:125%;
  text-shadow: 1px 2px 2px rgba(0,0,0,0.5);
}

.reveal h1 {
  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15); }

.reveal h2 {
  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5); }
  

  /*********************************************
 * OTHER
 *********************************************/
.reveal p {
  margin: 20px 0;
  line-height: 1.3;
  text-shadow: 1px 1px 3px rgba(0,0,0,0.5); }
.reveal .speaker-notes p {
  text-shadow: none; }
.reveal sup {
  vertical-align: super;
  font-size: 50%;
}
/* Ensure certain elements are never larger than the slide itself */
.reveal img,
.reveal video,
.reveal iframe {
  max-width: 95%;
  max-height: 95%; }

.reveal strong,
.reveal b {
  font-weight: bold; }

.reveal em {
  font-style: italic; }

.reveal ol,
.reveal dl,
.reveal ul {
  display: inline-block;
  text-align: left;
  margin: 0 0 0 1em; }

.reveal ol {
  list-style-type: decimal;
  font-size: 105%;
}

.reveal ul {
  list-style-type: disc;
  font-size: 115%;
 }

.reveal ul.no-bullets {
    list-style-type: none;
}

.reveal ul ul {
  list-style-type: square; }

.reveal ul ul ul {
  list-style-type: circle; }

.reveal ul ul,
.reveal ul ol,
.reveal ol ol,
.reveal ol ul {
  display: block;
  margin-left: 40px; }

.reveal dt {
  font-weight: bold; }

.reveal dd {
  margin-left: 40px; }

.reveal blockquote {
  display: block;
  position: relative;
  width: 70%;
  font-size: 120%;
  margin: 0 auto;
  padding: 5px;
  font-style: italic;
  background: rgba(255, 255, 255, 0.05);
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }

  .reveal blockquote::before {
    content: '"';
    position: absolute;
    font-size: 15rem;
    text-align: left;
    top: -2rem;
    left: -2rem;
    opacity: 0.3;
    font-family: cursive;
  }
  
.reveal blockquote p:first-child,
.reveal blockquote p:last-child {
  display: inline-block; }

.reveal .quote-attr {
  display: block;
  position: relative;
  margin: 5px auto;
  padding: 5px;
  width: 70%;
  text-align: right;
  font-size: 70%;
  margin-top: 0;
}

.reveal q {
  font-style: italic; }

.reveal pre:not(.inline) {
  display: block;
  position: relative;
  width: 90%;
  margin: 20px auto;
  text-align: left;
  font-size: 0.55em;
  font-family: monospace;
  line-height: 1.2em;
  word-wrap: break-word;
  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }

.reveal code {
  font-family: monospace;
  text-transform: none; }

.reveal code.inline-code {
  font-size: 90%;
  background-color: rgba(0,0,0,0.3); }

.reveal pre code {
  display: block;
  padding: 5px 5px 5px 25px;
  overflow: auto;
  max-height: 400px;
  word-wrap: normal; }

.reveal sub {
  vertical-align: sub; }

.reveal small {
  display: inline-block;
  font-size: 0.6em;
  line-height: 1.2em;
  vertical-align: top; }

.reveal small * {
  vertical-align: top; }

/*********************************************
 * LINKS
 *********************************************/
.reveal a {
  color: #13DAEC;
  text-decoration: none;
  -webkit-transition: color .15s ease;
  -moz-transition: color .15s ease;
  transition: color .15s ease;
  cursor: pointer;
 }

.reveal a:hover {
  color: #71e9f4;
  text-shadow: none;
  border: none; }

.reveal .roll span:after {
  color: #fff;
  background: #0d99a5; }

/*********************************************
 * IMAGES
 *********************************************/
.reveal section img {
  margin: 15px 0px;
  background: rgba(255, 255, 255, 0.2);
  border: 4px solid #eee;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }

.reveal section img.plain {
  background: none;
  border: 0;
  box-shadow: none; }

.reveal a img {
  -webkit-transition: all .15s linear;
  -moz-transition: all .15s linear;
  transition: all .15s linear; }

.reveal a:hover img {
  background: rgba(255, 255, 255, 0.2);
  border-color: #13DAEC;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
/* ... */

